feat: 重构用户数据模型和JWT工具类
- 重构User实体类，支持继承式设计
- 新增StudentUser和TeacherUser子类，实现角色特定字段
- 重写JwtUtil工具类，支持Java 17特性和双令牌机制
- 修复JWT密钥安全性问题，使用256位密钥
- 新增Result统一响应封装类
- 更新application.yml配置，增强JWT安全性

技术改进：
- 使用Java 17的var关键字和现代语法
- 实现访问令牌(1小时)和刷新令牌(7天)机制
- 支持令牌自动刷新和过期检测
- 优化数据库表结构设计